--- a/ProjectTemplate/index.html
+++ b/ProjectTemplate/index.html
@@ -39,5 +39,8 @@
 </head >
 <body>
 	<button onclick="javascript: TestButtonHandler();">Click here to test connection!</button>
+	
+	 <label for="pwd">Password:</label>
+	 <input type="password" id="pwd" name="pwd"> 
 </body>
 </html >
